--- a/webclient/src/FormView_Welcome/FormWelcome.css
+++ b/webclient/src/FormView_Welcome/FormWelcome.css
@@ -12,3 +12,13 @@
   max-width: 400px;
   margin: 20px auto;
 }
+
+@media (max-width: 600px) {
+  .segment {
+    width: 200px;
+  }
+
+  .submitBtn {
+    max-width: 250px;
+  }
+}
