--- a/webclient/src/FormView_Welcome/FormWelcome.css
+++ b/webclient/src/FormView_Welcome/FormWelcome.css
@@ -13,6 +13,11 @@
   margin: 20px auto;
 }
 
+.qText {
+  max-width: 500px;
+  margin: 30px auto;
+}
+
 @media (max-width: 600px) {
   .segment {
     width: 200px;
